# STRR

./: .gitignore  .sonarcloud.properties  codecov.yaml
.github/: CODEOWNERS  (+1 more)
jobs/auto-approval/: .env.sample  Dockerfile  pyproject.toml  run.sh
jobs/auto-approval/devops/: vaults.gcp.env
jobs/auto-approval/devops/gcp/: clouddeploy.yaml
jobs/auto-approval/src/auto_approval/: __main__.py  app.py  config.py  job.py
jobs/auto-approval/src/auto_approval/templates/: certificate.html
jobs/auto-approval/src/auto_approval/tests/: test_job.py  test_jwt_decoder.py
jobs/auto-approval/src/auto_approval/utils/: __init__.py  jwt_decoder.py  logging.py
jobs/auto-approval/tests/: conftest.py
jobs/auto-approval/tests/converted/: test_job.py
jobs/auto-approval/tests/unit/: test_setup.py  test_validate_test_utils.py
jobs/batch-permit-validator/: .env.sample  Dockerfile  Makefile  README.md  pyproject.toml  run.sh
jobs/batch-permit-validator/devops/: vault.gcp.env  vaults.gcp.env
jobs/batch-permit-validator/devops/gcp/: clouddeploy.yaml
jobs/batch-permit-validator/src/batch_permit_validator/: __main__.py  config.py  job.py  validation_cache.py
jobs/batch-permit-validator/src/batch_permit_validator/utils/: logging.py
jobs/batch-permit-validator/tests/: conftest.py  test_example.py
jobs/batch-permit-validator/tests/fixtures/: db_fixtures.py  redis_fixtures.py  utils_fixtures.py
jobs/batch-permit-validator/tests/unit/: test_redis.py  test_setup.py
jobs/batch-permit-validator/tests/unit/job/: test _validate_record.py  test_process_chunk_parallelism.py  test_process_file.py  test_process_record.py  test_process_records_in_parallel.py  test_run.py  test_save_response.py  test_strr_requirements.py  test_update_bulk_validation_record.py
jobs/interactions-update/: .dockerignore  .env.sample  .flake8  Dockerfile  Makefile  README.md  pyproject.toml  run.sh
jobs/interactions-update/devops/: vaults.gcp.env
jobs/interactions-update/devops/gcp/: clouddeploy.yaml
jobs/interactions-update/src/interactions_update/: __init__.py  __main__.py  database.py  job.py
jobs/interactions-update/tests/: conftest.py  test_setup.py
jobs/interactions-update/tests/load/: conftest.py  test_benchmarks.py  test_integration_flow.py  test_run.py
jobs/interactions-update/tests/unit/: test_database.py  test_database_cloud.py
jobs/noc_expiry/: Dockerfile  pyproject.toml  run.sh
jobs/noc_expiry/.devcontainer/: devcontainer.json
jobs/noc_expiry/devops/: vaults.gcp.env
jobs/noc_expiry/devops/gcp/: clouddeploy.yaml
jobs/noc_expiry/src/noc_expiry/: __main__.py  config.py  job.py
jobs/noc_expiry/tests/: test_setup.py
queue_services/batch-permit-validator/: .env.sample  LICENSE  README.md  pyproject.toml  wsgi.py
queue_services/batch-permit-validator/devops/: vault.gcp.env  vaults.gcp.env
queue_services/batch-permit-validator/devops/gcp/: clouddeploy.yaml
queue_services/batch-permit-validator/src/batch_permit_validator/: __init__.py  config.py
queue_services/batch-permit-validator/src/batch_permit_validator/resources/: __init__.py  batch_permit_validator.py
queue_services/batch-permit-validator/src/batch_permit_validator/services/: __init__.py
queue_services/strr-email/: Makefile  README.md  gunicorn_config.py  pyproject.toml  setup.cfg  wsgi.py
queue_services/strr-email/.devcontainer/: Dockerfile  devcontainer.json
queue_services/strr-email/devops/: vault.gcp.env  vaults.gcp.env
queue_services/strr-email/devops/gcp/: clouddeploy.yaml
queue_services/strr-email/email-templates/: strr-HOST_AUTO_APPROVED.md  strr-HOST_DECLINED.md  strr-HOST_FULL_REVIEW_APPROVED.md  strr-HOST_PROVISIONALLY_APPROVED.md  strr-HOST_PROVISIONALLY_DECLINED.md  strr-HOST_PROVISIONAL_REVIEW.md  strr-HOST_REGISTRATION_ACTIVE.md  strr-HOST_REGISTRATION_CANCELLED.md  strr-HOST_RENEWAL_REMINDER.md  strr-HOST_RENEWAL_REMINDER_FORTY_DAYS.md  strr-NOC.md  strr-PLATFORM_AUTO_APPROVED.md  strr-PLATFORM_RENEWAL_REMINDER.md  strr-PROVISIONAL_REVIEW_NOC.md  strr-REGISTRATION_NOC.md  strr-STRATA_HOTEL_RENEWAL_REMINDER.md
queue_services/strr-email/email-templates/common/: strr-footer.md  strr-host-approval-body.md  strr-host-approval.md  strr-important-deadlines.md  strr-important-next-steps.md  strr-provisional-approval-info.md  strr-tac.md  strr-title-application-status-change.md
queue_services/strr-email/src/strr_email/: __init__.py  config.py  utils.py
queue_services/strr-email/src/strr_email/resources/: __init__.py  email_listener.py
queue_services/strr-email/src/strr_email/services/: __init__.py
queue_services/strr-email/tests/: conftest.py
queue_services/strr-email/tests/fixtures/: local.py
queue_services/strr-email/tests/integration/: conftest.py  test_queue_email.py
queue_services/strr-email/tests/unit/: conftest.py  test_setup.py
services/common/model/: pyproject.toml
services/common/model/src/core/models/: __init__.py  account_roles.py  address.py  application.py  auto_approval_record.py  base_model.py  certificate.py  dataclass.py  events.py  ltsa.py  platforms.py  rental.py  strata_hotels.py  user.py
services/common/model/src/core/utils/: user_context.py
services/common/model/src/migrations/versions/: 20240724_0443_a3c9d7aec165_.py  20240730_1153_f8e41c37e62c_.py  20240801_0512_ac23b69c2c1a_.py  20240801_0544_64243bf62473_.py  20240926_1420_d9213a367092_.py  20240927_1313_c8d5441975d9_.py  20240928_1440_c4166215e918_.py  20241004_1701_3374a67f7a5a_.py  20241007_0241_730a68e06df1_.py  20241017_1732_b661320a5aa8_.py  20241023_1913_a3cf5bb26f36_.py  20241023_2357_dbca5f95ed31_.py  20241028_1659_14f84cc80367_.py  20241031_2216_1ddad4ce0e21_.py  20241114_0610_5c6d73a45f6a_.py  20241115_2110_a07c418dc065_.py  20241122_2030_9f1cd9a7258f_.py  20241125_0259_2350c2b87dc6_.py  20241204_0630_0566d52f0869_.py  20241206_0731_8912b6965de6_.py
tests/python-test-utils/: README.md  pyproject.toml
tests/python-test-utils/src/strr_test_utils/: client_fixtures.py  db_fixtures.py  redis_fixtures.py  utils_fixtures.py
tests/python-test-utils/tests/: conftest.py  test_test_utils.py
(+1206 files in other folders)
