[tool.poetry]
name = "auto-approval"
version = "1.0.0"
description = ""
authors = []
packages = [{include = "auto_approval", from = "src"}]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.2,<3.15"
flask = "^3.0.3"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"
launchdarkly-server-sdk = "^9.0.1"
python-dotenv = "^1.0.1"
sentry-sdk = "^1.44.1"
flask-babel = "^4.0.0"
gunicorn = "^21.2.0"
pg8000 = "^1.31.2"
gcp-queue = { git = "https://github.com/bcgov/sbc-connect-common.git", subdirectory = "python/gcp-queue", branch = "main" }
structured-logging = { git = "https://github.com/bcgov/sbc-connect-common.git", subdirectory = "python/structured-logging", branch = "main" }
strr-api = {git = "https://github.com/bcgov/STRR.git", rev = "main", subdirectory = "strr-api"}
nanoid = "^2.0.0"
# Force zopfli >=0.4.0: 0.2.3 has no py3.13 wheel and fails to build (needs gcc)
zopfli = ">=0.4.0"
# Force psycopg2-binary >=2.9.10: 2.9.9 has no py3.13 wheel and fails to build (needs gcc)
psycopg2-binary = ">=2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^7.1.0"
pre-commit = "^3.7.0"
faker = "^24.4.0"
isort = "^5.13.2"
black = "^24.10.0"
pylint = "^3.0.3"
strr-test-utils = {path = "../../tests/python-test-utils", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint]
max-line-length = 132
