[tool.poetry]
name = "strr-test-utils"
version = "0.1.0"
description = "Shared Test Utilities for STRR Jobs"
authors = ["thor wolpert <thor@daxiom.com>"]
packages = [{include = "strr_test_utils", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.0"
structlog = "*"
testcontainers = {extras = ["postgres", "redis"], version = "^4.0.0"}
sqlalchemy = "*"
flask-sqlalchemy = "*"

[tool.poetry.group.dev.dependencies]
strr-api = { path = "../../strr-api", develop = true }
isort = "^8.0.1"
black = "^26.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.*:",
    "ignore::DeprecationWarning:docker.*:",
    "ignore::ResourceWarning:testcontainers.*:"
]
